<resources>
    <string name="app_name">realmrealm</string>
    <string name="register">Register Page</string>
    <string name="username">Enter UserName</string>
    <string name="username1">User Name</string>
    <string name="password">Enter the password</string>
    <string name="password1">Password</string>
    <string name="mobile_number">Enter MobileNumber</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="email_id">Enter E-mail Id</string>
    <string name="email_id1">e-mail Id</string>
    <string name="Login">Login Page</string>
    <string name="btnLogin">Login Here</string>
</resources>